# NeuroPace-RDNA

./: .editorconfig  .gitignore  LICENSE  README.md  SECURITY.md  release_notes.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
actuator/: CMakeLists.txt  vcpkg.json
actuator/include/: action_types.h  adlx_actuator.h  ipc_action_subscriber.h  process_scheduler.h  safety_guard.h
actuator/src/: adlx_actuator.cpp  ipc_action_subscriber.cpp  main.cpp  process_scheduler.cpp  safety_guard.cpp
actuator/tests/: test_safety_guard.cpp  test_scheduler.cpp
ai-engine/src/: config.py  ipc_action_publisher.py  ipc_subscriber.py  main.py  online_trainer.py  predictor.py
ai-engine/tests/: test_predictor.py
ai-engine/training/: train_rf.py
dashboard/: package-lock.json  package.json
dashboard/public/: index.html
dashboard/public/css/: dashboard.css
dashboard/public/js/: app.js  chart-engine.js  vue.global.prod.js
dashboard/server/: index.js  pipe-bridge.js  process-manager.js  rpc.js
docs/: anti-cheat-compliance.md  benchmarks.md  technical-manifesto.md
releases/NeuroPace-RDNA-v0.1.0/ai-engine/: pyproject.toml  requirements.txt
releases/NeuroPace-RDNA-v0.1.0/ai-engine/models/: .gitkeep
releases/NeuroPace-RDNA-v0.1.0/ai-engine/tests/: test_feature_engineer.py
releases/NeuroPace-RDNA-v0.1.0/ai-engine/training/: generate_synthetic.py
releases/NeuroPace-RDNA-v0.1.0/dashboard/: package-lock.json  package.json
releases/NeuroPace-RDNA-v0.1.0/dashboard/public/js/: app.js
releases/NeuroPace-RDNA-v0.1.0/dashboard/server/: config.js
releases/NeuroPace-RDNA-v0.1.0/models/: frame_drop_rf.onnx
releases/NeuroPace-RDNA-v0.1.0/scripts/: __init__.py  config.py  feature_engineer.py
scripts/: ControlPanel.cs  SysTrayLauncher.cs  build-all.ps1  cs2_monitor.py  install-deps.ps1  mock-telemetry.py  run-all.ps1  run-dashboard-admin.ps1  test-integration.ps1
shared/ipc-contracts/: action_command.json  telemetry_frame.json
telemetry/: CMakeLists.txt  vcpkg.json
telemetry/include/: adlx_sensor.h  etw_collector.h  ipc_publisher.h  telemetry_data.h
telemetry/src/: adlx_sensor.cpp  etw_collector.cpp  ipc_publisher.cpp  main.cpp  telemetry_aggregator.cpp
telemetry/tests/: test_adlx_mock.cpp  test_etw.cpp
test_extract/NeuroPace-RDNA-v0.1.0/: README.md
test_extract/NeuroPace-RDNA-v0.1.0/scripts/: ipc_action_publisher.py  ipc_subscriber.py
